--- a/src/app/admin/layout/navigation-menu/navigation-menu.component.scss
+++ b/src/app/admin/layout/navigation-menu/navigation-menu.component.scss
@@ -92,4 +92,14 @@
       background: #FFF;
     }
   }
+//   ::ng-deep.iconic-layout-wrapper > .input-container {
+//     background-color: white !important;
+//     position: relative!important;
+//     display: flex !important;
+//     align-items: center !important;
+//     border: 0px !important; 
+//     border-radius: 0px !important; 
+//     padding: 0px !important; 
+//     min-height: 0px !important; 
+// }
 }
