--- a/src/app/operator/layout/navigation-menu/navigation-menu.component.html
+++ b/src/app/operator/layout/navigation-menu/navigation-menu.component.html
@@ -1,44 +1,46 @@
-<div class="layout-wrapper">
+<!-- <div class="layout-wrapper">
     <a [routerLink]="logoRedirect" class="logo">
-        <img *ngIf="logoSrc; else iconLogo" [src]="logoSrc" alt="logo" />
-        <ng-template #iconLogo>
-          <fa-icon icon="truck-fast" size="3x" class="tw-text-primary"></fa-icon>
-        </ng-template>
+      <img src="assets/images/boat-pin.svg">
       </a>
-  <!-- <a [routerLink]="logoRedirect" class="logo">
-    <img [src]="logoSrc" alt="logo" *ngIf="logoSrc" />
-  </a>
-
-  <a href="javascript:void(0)" class="tw-px-6 tw-pb-4">
-    <fa-icon size="2x" icon="truck-fast"></fa-icon>
-  </a> -->
 
   <div class="upper-menu-items">
     <div class="layout-wrapper" routerLink="dashboard">
       <fa-icon icon="tachometer-fast" size="2x"></fa-icon>
       <span class="menu-item-label">Dashboard</span>
     </div>
-    <!-- <div class="layout-wrapper">
-      <fa-icon icon="calendar-days" size="2x"></fa-icon>
-      <span class="menu-item-label">Scheduling</span>
-    </div> -->
-    <!-- <div class="layout-wrapper" routerLink="vehicle">
-      <fa-icon icon="shield" size="2x"></fa-icon>
-      <span class="menu-item-label">Partners</span>
-    </div> -->
     <div class="layout-wrapper" routerLink="scheduling">
       <fa-icon icon="location-dot" size="2x"></fa-icon>
       <span class="menu-item-label">Scheduling</span>
     </div>
-    <!-- <div class="layout-wrapper" routerLink="vehicle">
-      <fa-icon icon="square-list" size="2x"></fa-icon>
-      <span class="menu-item-label">List</span>
-    </div> -->
   </div>
-  <!-- <div class="lower-menu-items" *ngIf="isAdmin">
-    <div class="layout-wrapper" routerLink="../admin/location-settings">
-      <fa-icon icon="sliders-up" size="2x"></fa-icon>
-      <span class="menu-item-label">Location Settings</span>
-    </div>
-  </div> -->
+</div> -->
+<div class="layout-wrapper slide-in-left">
+  <a [routerLink]="logoRedirect" class="logo">
+          <img src="assets/images/boat-pin.svg">
+  </a>
+
+  <div class="upper-menu-items">
+      <div class="layout-wrapper" routerLink="dashboard">
+          <fa-icon icon="tachometer-fast" size="2x"></fa-icon>
+          <span class="menu-item-label">Dashboard</span>
+      </div>
+      <div class="layout-wrapper" routerLink="../admin/map">
+          <fa-icon icon="location-dot" size="2x"></fa-icon>
+          <span class="menu-item-label tw-text-gray">Map</span>
+      </div>
+      <div class="layout-wrapper" routerLink="../admin/map">
+          <fa-icon icon="square-list" size="2x"></fa-icon>
+          <span class="menu-item-label tw-text-gray">List</span>
+      </div>
+      <div class="layout-wrapper" routerLink="../admin/list-management">
+          <img src="assets/images/rubber-stamp.svg">
+          <span class="menu-item-label tw-text-gray">Approvals</span>
+      </div>
+  </div>
+  <div class="lower-menu-items">
+      <div class="layout-wrapper" routerLink="location-settings">
+          <fa-icon icon="sliders-up" size="2x"></fa-icon>
+          <span class="menu-item-label">Settings</span>
+      </div>
+  </div>
 </div>
