--- a/src/app/admin/berths/berths-success/berths-success.component.html
+++ b/src/app/admin/berths/berths-success/berths-success.component.html
@@ -1,15 +1,15 @@
 <success-container headerTitle="Add location">
     <div>
         <h4 class="heading-4 tw-py-10 tw-text-center">Success!</h4>
-        <p class="text-center heading-6 tw-max-w-[929px] tw-mx-auto">Your berth was successfully finalized and an email was sent to you confirming the operation.
-            Please make sure to follow the progress in this platform!</p>
+        <p class="text-center heading-6 tw-max-w-[929px] tw-text-center tw-mx-auto">Your berth was successfully added and an email was sent to you confirming the operation.</p>
     </div>
     <div class="tw-text-center tw-py-5">
         <fa-icon icon="party-horn" class="tw-text-primary tw-text-[270px]"></fa-icon>
     </div>
-    <div class="tw-flex max-md:tw-flex-col tw-justify-between min-xl:tw-px-40 max-md:tw-px-0 max-md:tw-gap-5">
-        <button type="button" class="btn btn-primary min-lg:tw-min-w-[250px]" routerLink="../../">Home</button>
-        <button type="button" class="btn btn-primary min-lg:tw-min-w-[250px]" routerLink="../../location-settings">Go to Settings</button>
+    <div class="tw-flex max-md:tw-flex-col tw-justify-center min-xl:tw-px-40 max-md:tw-px-0 max-md:tw-gap-5">
+        <div class="tw-flex tw-gap-4">
+        <button type="button" class="btn btn-outline-primary min-lg:tw-min-w-[250px]" routerLink="../../">Home</button>
         <button type="button" class="btn btn-primary min-lg:tw-min-w-[250px]" routerLink="../add">New Berth</button>
     </div>
+</div>
 </success-container>
