--- a/src/app/operator/layout/navigation-menu/navigation-menu.component.html
+++ b/src/app/operator/layout/navigation-menu/navigation-menu.component.html
@@ -15,9 +15,9 @@
   </div>
 </div> -->
 <div class="layout-wrapper slide-in-left">
-  <a [routerLink]="logoRedirect" class="logo">
+  <!-- <a [routerLink]="logoRedirect" class="logo"> -->
           <img src="assets/images/boat-pin.svg">
-  </a>
+  <!-- </a> -->
 
   <div class="upper-menu-items">
       <div class="layout-wrapper" routerLink="dashboard">
