--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,9 +16,9 @@
 @import "assets/scss/typography";
 @import "assets/scss/anchors";
 
-@import "swiper/swiper.min.css";
-@import "swiper/css/navigation";
-@import "swiper/css/pagination";
+// @import "swiper/swiper.min.css";
+// @import "swiper/css/navigation";
+// @import "swiper/css/pagination";
 @import "assets/scss/variables";
 
 @import 'flag-icons/sass/flag-icons';
