--- a/src/app/admin/berths/no-berths/no-berths.component.html
+++ b/src/app/admin/berths/no-berths/no-berths.component.html
@@ -6,9 +6,8 @@
     <div class="tw-mt-10">
         <h4 class="heading-4 tw-text-center tw-pb-10">There are no berths enrolled</h4>
         <p class="heading-6 tw-text-center tw-text-gray">
-            Add your first berth and start managing assets.<br>
-            After you added a new berths you can set other details such as<br>
-            residents, access points, parking place, etc.<br>
+            Add your berths using button below.<br>
+            You caan manage their status or edit them at any time.<br>
         </p>
         <div class="tw-text-center tw-pt-10 tw-flex tw-justify-center tw-px-10">
             <button routerLink="../add" type="button" class="btn btn-primary tw-flex-grow tw-h-[50px] tw-max-w-[200px]">
