--- a/src/app/admin/layout/navigation-menu/navigation-menu.component.html
+++ b/src/app/admin/layout/navigation-menu/navigation-menu.component.html
@@ -1,7 +1,7 @@
 <div class="layout-wrapper slide-in-left">
-    <a [routerLink]="logoRedirect" class="logo">
+    <!-- <a [routerLink]="logoRedirect" class="logo"> -->
             <img src="assets/images/boat-pin.svg">
-    </a>
+    <!-- </a> -->
 
     <div class="upper-menu-items">
         <div class="layout-wrapper" routerLink="dashboard">
@@ -9,11 +9,7 @@
             <span class="menu-item-label">Dashboard</span>
         </div>
         <div class="layout-wrapper" routerLink="../admin/map">
-            <!-- <img src="assets/images/map-location.svg" alt="icon" class="tw-mx-2"> -->
-            <!-- <div svg-layout layoutSvg="assets/images/map-location.svg"></div> -->
-            <!-- <img src="assets/images/map-location.svg"> -->
             <fa-icon icon="location-dot" size="2x"></fa-icon>
-            <!-- <fa-icon icon="map-location" size="2x"></fa-icon> -->
             <span class="menu-item-label tw-text-gray">Map</span>
         </div>
         <div class="layout-wrapper" routerLink="../admin/map">
@@ -21,9 +17,7 @@
             <span class="menu-item-label tw-text-gray">List</span>
         </div>
         <div class="layout-wrapper" routerLink="../admin/list-management">
-            <!-- <img src="assets/images/rubber-stamp.svg"> -->
-            <div iconic-input-wrapper leftSvg="assets/images/rubber-stamp.svg"></div>
-            <!-- <fa-icon icon="location-dot" size="2x"></fa-icon> -->
+            <img src="assets/images/rubber-stamp.svg">
             <span class="menu-item-label tw-text-gray">Approvals</span>
         </div>
     </div>
