features-port-company

--- a/src/app/admin/berths/berths-success/berths-success.component.html
+++ b/src/app/admin/berths/berths-success/berths-success.component.html
@@ -1,7 +1,7 @@
 <success-container headerTitle="Add location">
     <div>
         <h4 class="heading-4 tw-py-10 tw-text-center">Success!</h4>
-        <p class="text-center heading-6 tw-max-w-[929px] tw-text-center tw-mx-auto">Your berth was successfully added and an email was sent to you confirming the operation.</p>
+        <p class="tw-text-center heading-6 tw-max-w-[929px] tw-mx-auto">Your berth was successfully added and an email was sent to you confirming the operation.</p>
     </div>
     <div class="tw-text-center tw-py-5">
         <fa-icon icon="party-horn" class="tw-text-primary tw-text-[270px]"></fa-icon>
