--- a/src/app/admin/companies/no-companies/no-companies.component.html
+++ b/src/app/admin/companies/no-companies/no-companies.component.html
@@ -1,6 +1,7 @@
 <full-empty-container>
     <div class="tw-flex tw-justify-center">
-        <fa-icon icon="location-dot" class="tw-text-primary tw-text-[160px]"></fa-icon>
+        <!-- <fa-icon icon="location-dot" class="tw-text-primary tw-text-[160px]"></fa-icon> -->
+        <img src="assets/images/no-department.svg">
     </div>
 
     <div class="tw-mt-10">
