--- a/src/app/public/set-password/set-password.component.html
+++ b/src/app/public/set-password/set-password.component.html
@@ -19,7 +19,7 @@
           <div class="tw-flex tw-flex-col tw-gap-4 tw-text-center">
               <button [disabled]="isLoading$ | async" type="submit" class="btn btn-primary tw-w-full" (click)="setPassword()">Set Password</button>
               <p class="tw-text-center tw-text-xl">Or go back to the
-                  <a class="tw-font-bold" routerLink="../sign-in">
+                  <a class="tw-font-bold" routerLink="../../sign-in">
                       Sign in
                   </a>
                   page
