--- a/src/app/admin/map/map.component.html
+++ b/src/app/admin/map/map.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
     <header
         class="tw-flex min-md:tw-flex-row tw-flex-col tw-justify-between tw-pb-2"
     >
@@ -23,7 +23,39 @@
         {{ markerPosition.lat }}
         {{ markerPosition.lng }}
     </map-info-window>
-</google-map>
+</google-map> -->
 
 <!-- <div>Latitude: {{ display?.lat }}</div>
 <div>Longitude: {{ display?.lng }}</div> -->
+
+
+<section>
+    <header class="tw-flex min-md:tw-flex-row tw-flex-col tw-justify-between tw-pb-2">
+        <h3 class="heading-3 tw-font-bold">Map</h3>
+    </header>
+    <!-- Search Input -->
+    <input type="text" [(ngModel)]="searchQuery" placeholder="Search location" />
+    <button (click)="searchLocation()">Search</button>
+</section>
+<google-map
+    height="470px"
+    width="100%"
+    [center]="center"
+    [zoom]="zoom"
+    (mapClick)="addMarker($event)"
+    (mapMousemove)="move($event)"
+>
+<map-ground-overlay [url]="imageUrl" [bounds]="searchCard"></map-ground-overlay>
+
+    <!-- Map Markers -->
+    <map-marker
+        #marker="mapMarker"
+        *ngFor="let markerPosition of markerPositions"
+        [position]="markerPosition"
+        (mapClick)="openInfoWindow(marker)"
+    ></map-marker>
+    <map-info-window *ngFor="let markerPosition of markerPositions">
+        {{ markerPosition.lat }}
+        {{ markerPosition.lng }}
+    </map-info-window>
+</google-map>
