--- a/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
+++ b/src/app/admin/ports/ports-add-edit/ports-add-edit.component.html
@@ -1,14 +1,14 @@
-﻿<!--<edit-container headerTitle="Add location">-->
+﻿<!--<edit-container headerTitle="Add port">-->
     <edit-container [headerTitle]="id ?  'Edit port details':'Add port details'">
     <app-loader *ngIf="(isLoading$ | async)" [isContainer]="true" [fullScreen]="false"></app-loader>
-    <form *ngIf="!(isLoading$ | async)" [formGroup]="locationForm">
+    <form *ngIf="!(isLoading$ | async)" [formGroup]="portForm">
         <div>
             <div>
                 <h6 class="tw-font-bold">Details</h6>
                 <div class="min-xl:tw-columns-3">
                     <div class="tw-h-[75px]">
                         <div iconic-input-wrapper leftIcon="location-dot">
-                            <input placeholder="Location Name" inputRef type="text" id="locationName" formControlName="name">
+                            <input placeholder="Location Name" inputRef type="text" id="portName" formControlName="name">
                         </div>
                     </div>
                     <div class="tw-h-[75px]">
@@ -17,17 +17,17 @@
                         </div>
                     </div>
                     <div class="tw-h-[75px]">
-                        <div *ngIf="(location$ | async)?.imgPreview">
+                        <div *ngIf="(ports$ | async)?.imgPreview">
                             <label >&nbsp;</label>
                             <div class="tw-relative tw-w-[50px]">
                                 <span class="tw-absolute tw-top-1/2 tw-left-1/2
                                 tw-transform tw--translate-x-1/2 tw--translate-y-1/2 tw-text-gray tw-text-3xl
                                 tw-cursor-pointer"
                                 (click)="clearImgPreview()">&times;</span>
-                                <img [src]="(location$ | async)?.imgPreview" alt="imgPreview" width="50" height="50">
+                                <img [src]="(ports$ | async)?.imgPreview" alt="imgPreview" width="50" height="50">
                             </div>
                         </div>
-                        <div *ngIf="!(location$ | async)?.imgPreview">
+                        <div *ngIf="!(ports$ | async)?.imgPreview">
                             <div iconic-input-wrapper leftIcon="camera" class="tw-cursor-pointer" (click)="triggerFile.click()">
                                 <input inputRef type="text" placeholder="Picture (480 x 300 px)" readonly #inputReference>
                                 <input style="display: none;" type="file"  #triggerFile accept="image/*" (change)="setImgPreview($event.target, inputReference)">
@@ -53,7 +53,7 @@
                         <div class="min-md:tw-flex tw-gap-2">
                             <div class="tw-flex-2">
                                 <div iconic-input-wrapper>
-                                    <input placeholder="No." inputRef type="text" formControlName="addrNumber">
+                                    <input placeholder="No." inputRef type="text" formControlName="addrStreetNo">
                                 </div>
                             </div>
                             <div class="tw-flex-1">
@@ -126,7 +126,7 @@
         <div class="tw-flex tw-justify-end tw-pt-5">
             <div class="tw-flex tw-gap-4">
                 <button [routerLink]="id ? '../../list': '../list'" class="btn btn-outline-primary" type="button" [disabled]="(isLoading$ | async)">Cancel</button>
-                <button class="btn btn-primary" type="button" (click)="savePort()" [disabled]="locationForm.invalid || (isLoading$ | async)">Save</button>
+                <button class="btn btn-primary" type="button" (click)="savePort()" [disabled]="portForm.invalid || (isLoading$ | async)">Save</button>
             </div>
         </div>
     </form>
