Features Map Card

--- a/src/app/admin/map/search/search.component.scss
+++ b/src/app/admin/map/search/search.component.scss
@@ -21,5 +21,15 @@
         border-radius: 0 12px 12px 0;
         background-color: #FFFFFF;
         display: flex;
+        flex-direction: column;
+        .top{
+            flex-basis: 100px;
+            overflow-y: scroll;
+        }
+        .bottom{
+            display: flex;
+            justify-content: space-evenly;
+            flex-basis: 40px;
+        }
     }
 }
