--- a/src/app/admin/map/search/search.component.html
+++ b/src/app/admin/map/search/search.component.html
@@ -10,10 +10,63 @@
     </div>
     <div class="right">
         <div class="top">
-
+            <div class="company" *ngIf="isActive === 1">
+                <h2>Filter by company</h2>
+                <div iconic-select-wrapper leftIcon="grid-2" [rightIcon]="['fas', 'caret-down']" class="tw-w-48 tw-h-5">
+                    <select inputRef name="companyId" id="companyId">
+                        <option *ngFor="let company of companies;" [value]="company.companyId">{{company.name}}</option>
+                    </select>
+                  </div>
+            </div>
+            <div class="status" *ngIf="isActive === 2">
+                <h2>Filter by Status</h2>
+                <mat-checkbox class="example-margin">On Route</mat-checkbox>
+                <mat-checkbox class="example-margin">Port</mat-checkbox>
+                <mat-checkbox class="example-margin">Berth</mat-checkbox>
+                <mat-checkbox class="example-margin">Exit</mat-checkbox>
+            </div>
+            <div class="time" *ngIf="isActive === 3">
+                <h2>Filter by Time</h2>
+                <div iconic-select-wrapper leftIcon="grid-2" [rightIcon]="['fas', 'caret-down']" class="tw-w-48 tw-h-5">
+                    <select inputRef name="companyId" id="companyId">
+                        <option *ngFor="let company of companies;" [value]="company.companyId">{{company.name}}</option>
+                    </select>
+                  </div>
+                  <mat-radio-group aria-label="Select an option">
+                    <mat-radio-button value="1">Option 1</mat-radio-button>
+                    <mat-radio-button value="2">Option 2</mat-radio-button>
+                    <mat-radio-button value="2">Option 2</mat-radio-button>
+                  </mat-radio-group>
+                  <input type="text">
+                  <input type="text">
+            </div>
+            <div class="sid" *ngIf="isActive === 4">
+                <mat-form-field>
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
+                  <div iconic-select-wrapper leftIcon="grid-2" [rightIcon]="['fas', 'caret-down']" class="tw-w-48 tw-h-5">
+                    <select inputRef name="companyId" id="companyId">
+                        <option *ngFor="let company of companies;" [value]="company.companyId">{{company.name}}</option>
+                    </select>
+                  </div>
+                  <div iconic-select-wrapper leftIcon="grid-2" [rightIcon]="['fas', 'caret-down']" class="tw-w-48 tw-h-5">
+                    <select inputRef name="companyId" id="companyId">
+                        <option *ngFor="let company of companies;" [value]="company.companyId">{{company.name}}</option>
+                    </select>
+                  </div>
+                  <input type="text">
+                  <input type="text">
+            </div>
         </div>
         <div class="bottom">
-            <img [src]="" alt="">
+            <img [src]="isActive === 1 ? 'assets/images/cardBuilding2.svg' : 'assets/images/cardBuilding.svg' " alt="" (click)="onImgClick(1)"  class="tw-w-5 tw-h-5">
+            <img [src]="isActive === 2 ? 'assets/images/cardChain2.svg' : 'assets/images/cardChain.svg' " alt="" (click)="onImgClick(2)"  class="tw-w-5 tw-h-5">
+            <img [src]="isActive === 3 ? 'assets/images/cardClock2.svg' : 'assets/images/cardClock.svg' " alt="" (click)="onImgClick(3)"  class="tw-w-5 tw-h-5">
+            <img [src]="isActive === 4 ? 'assets/images/cardBoat2.svg' : 'assets/images/cardBoat.svg' " alt="" (click)="onImgClick(4)"  class="tw-w-5 tw-h-5">
         </div>
     </div>
 </div>
