--- a/src/app/admin/map/map.component.html
+++ b/src/app/admin/map/map.component.html
@@ -34,8 +34,8 @@
         <h3 class="heading-3 tw-font-bold">Map</h3>
     </header>
     <!-- Search Input -->
-    <input type="text" [(ngModel)]="searchQuery" placeholder="Search location" />
-    <button (click)="searchLocation()">Search</button>
+    <!-- <input type="text" [(ngModel)]="searchQuery" placeholder="Search location" />
+    <button (click)="searchLocation()">Search</button> -->
 </section>
 <google-map
     height="470px"
