--- a/src/app/admin/ports/ports-list/ports-list.component.html
+++ b/src/app/admin/ports/ports-list/ports-list.component.html
@@ -172,7 +172,7 @@
                             </section>
                         </th>
                         <td cdk-cell *cdkCellDef="let row">
-                            {{ row.addrNumber }}
+                            {{ row.addrStreetNo }}
                         </td>
                     </ng-container>
 
