--- a/src/app/admin/companies/companies-add-edit/companies-add-edit.component.html
+++ b/src/app/admin/companies/companies-add-edit/companies-add-edit.component.html
@@ -1,5 +1,11 @@
-﻿ <edit-container [headerTitle]="id ?  'Edit company details':'Add company details'">
-    <app-loader *ngIf="(isLoading$ | async)" [isContainer]="true" [fullScreen]="false"></app-loader>
+﻿<edit-container
+    [headerTitle]="id ? 'Edit company details' : 'Add company details'"
+>
+    <app-loader
+        *ngIf="isLoading$ | async"
+        [isContainer]="true"
+        [fullScreen]="false"
+    ></app-loader>
     <form *ngIf="!(isLoading$ | async)" [formGroup]="companyForm">
         <div>
             <div>
@@ -7,29 +13,68 @@
                 <div class="min-xl:tw-columns-3">
                     <div class="tw-h-[90px]">
                         <div iconic-input-wrapper leftIcon="location-dot">
-                            <input placeholder="Location Name" inputRef type="text" id="locationName" formControlName="name">
+                            <input
+                                placeholder="Location Name"
+                                inputRef
+                                type="text"
+                                id="locationName"
+                                formControlName="name"
+                            />
                         </div>
                     </div>
                     <div class="tw-h-[90px]">
                         <div iconic-input-wrapper leftIcon="compass">
-                            <input placeholder="Google Maps coordinates (Plus code)" inputRef type="text" formControlName="addrCoordinates">
+                            <input
+                                placeholder="Google Maps coordinates (Plus code)"
+                                inputRef
+                                type="text"
+                                formControlName="addrCoordinates"
+                            />
                         </div>
                     </div>
                     <div class="tw-h-[90px]">
                         <div *ngIf="(company$ | async)?.imgPreview">
-                            <label >&nbsp;</label>
+                            <label>&nbsp;</label>
                             <div class="tw-relative tw-w-[50px]">
-                                <span class="tw-absolute tw-top-1/2 tw-left-1/2
-                                tw-transform tw--translate-x-1/2 tw--translate-y-1/2 tw-text-gray tw-text-3xl
-                                tw-cursor-pointer"
-                                (click)="clearImgPreview()">&times;</span>
-                                <img [src]="(company$ | async)?.imgPreview" alt="imgPreview" width="50" height="50">
+                                <span
+                                    class="tw-absolute tw-top-1/2 tw-left-1/2 tw-transform tw--translate-x-1/2 tw--translate-y-1/2 tw-text-gray tw-text-3xl tw-cursor-pointer"
+                                    (click)="clearImgPreview()"
+                                    >&times;</span
+                                >
+                                <img
+                                    [src]="(company$ | async)?.imgPreview"
+                                    alt="imgPreview"
+                                    width="50"
+                                    height="50"
+                                />
                             </div>
                         </div>
                         <div *ngIf="!(company$ | async)?.imgPreview">
-                            <div iconic-input-wrapper leftIcon="camera" class="tw-cursor-pointer" (click)="triggerFile.click()">
-                                <input inputRef type="text" placeholder="Picture (480 x 300 px)" readonly #inputReference>
-                                <input style="display: none;" type="file"  #triggerFile accept="image/*" (change)="setImgPreview($event.target, inputReference)">
+                            <div
+                                iconic-input-wrapper
+                                leftIcon="camera"
+                                class="tw-cursor-pointer"
+                                (click)="triggerFile.click()"
+                            >
+                                <input
+                                    inputRef
+                                    type="text"
+                                    placeholder="Picture (480 x 300 px)"
+                                    readonly
+                                    #inputReference
+                                />
+                                <input
+                                    style="display: none"
+                                    type="file"
+                                    #triggerFile
+                                    accept="image/*"
+                                    (change)="
+                                        setImgPreview(
+                                            $event.target,
+                                            inputReference
+                                        )
+                                    "
+                                />
                             </div>
                         </div>
                     </div>
@@ -37,32 +82,60 @@
             </div>
             <div class="min-xl:tw-columns-3">
                 <div>&nbsp;</div>
-                <div><div class="tw-text-right tw-font-bold tw-cursor-pointer">How do I find Google maps coordinates?</div></div>
+                <div>
+                    <div class="tw-text-right tw-font-bold tw-cursor-pointer">
+                        How do I find Google maps coordinates?
+                    </div>
+                </div>
                 <div>&nbsp;</div>
             </div>
             <div>
                 <h6 class="tw-font-bold">Address</h6>
                 <div class="min-xl:tw-columns-3">
                     <div class="tw-h-[110px]">
-                        <div iconic-input-wrapper leftIcon="location-crosshairs">
-                            <input placeholder="Street" inputRef type="text" id="addrStreet" formControlName="addrStreet">
+                        <div
+                            iconic-input-wrapper
+                            leftIcon="location-crosshairs"
+                        >
+                            <input
+                                placeholder="Street"
+                                inputRef
+                                type="text"
+                                id="addrStreet"
+                                formControlName="addrStreet"
+                            />
                         </div>
                     </div>
                     <div class="tw-h-[110px]">
                         <div class="min-md:tw-flex tw-gap-2">
                             <div class="tw-flex-2">
                                 <div iconic-input-wrapper>
-                                    <input placeholder="No." inputRef type="text" formControlName="addrStreetNo">
+                                    <input
+                                        placeholder="No."
+                                        inputRef
+                                        type="text"
+                                        formControlName="addrStreetNo"
+                                    />
                                 </div>
                             </div>
                             <div class="tw-flex-1">
                                 <div iconic-input-wrapper>
-                                    <input placeholder="City" inputRef type="text" formControlName="addrCity">
+                                    <input
+                                        placeholder="City"
+                                        inputRef
+                                        type="text"
+                                        formControlName="addrCity"
+                                    />
                                 </div>
                             </div>
                             <div class="tw-flex-1">
                                 <div iconic-input-wrapper>
-                                    <input placeholder="County" inputRef type="text" formControlName="addrCounty">
+                                    <input
+                                        placeholder="County"
+                                        inputRef
+                                        type="text"
+                                        formControlName="addrCounty"
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -71,15 +144,24 @@
                         <div class="min-md:tw-flex tw-gap-2">
                             <div class="tw-flex-1">
                                 <div iconic-input-wrapper>
-                                    <input placeholder="Country" inputRef type="text" formControlName="addrCountry">
+                                    <input
+                                        placeholder="Country"
+                                        inputRef
+                                        type="text"
+                                        formControlName="addrCountry"
+                                    />
                                 </div>
                             </div>
-                                <div class="tw-flex-1">
+                            <div class="tw-flex-1">
                                 <div iconic-input-wrapper>
-                                    <input placeholder="Zip Code" inputRef type="text" formControlName="addrZipCode">
+                                    <input
+                                        placeholder="Zip Code"
+                                        inputRef
+                                        type="text"
+                                        formControlName="addrZipCode"
+                                    />
                                 </div>
-                                </div>
-
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -88,64 +170,87 @@
                 <h6 class="tw-font-bold">Contact</h6>
                 <div class="tw-py-[100px]">
                     <table class="table tw-border tw-border-lightgray">
-                      <thead>
-                        <tr>
-                          <th>Name</th>
-                          <th>Capacity</th>
-                          <th>Occupied Capacity</th>
-                          <th>Client</th>
-                          <th>Product</th>
-                          <!-- <th>Greutate (kg)</th> -->
-                          <th></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>name</td>
-                          <td>name</td>
-                          <td>name</td>
-                          <td>name</td>
-                          <td>name</td>
-                          <!-- <td>{{contact.capacity || '-'}}</td>
-                          <td>{{contact.occupiedCapacity || '-'}}</td>
-                          <td>{{contact.client || '-'}}</td>
-                          <td>{{contact.product || '-'}}</td> -->
-                          <!-- <td>{{contact.weight || '-'}}</td> -->
-                          <td class="tw-flex tw-gap-2">
-                            <fa-icon  icon="pen" class="tw-text-primary tw-cursor-pointer"></fa-icon>
-                            <fa-icon  icon="trash" class="tw-text-primary tw-cursor-pointer"></fa-icon>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>name</td>
-                          <td>name</td>
-                          <td>name</td>
-                          <td>name</td>
-                          <td>name</td>
-                          <!-- <td>{{contact.capacity || '-'}}</td>
-                          <td>{{contact.occupiedCapacity || '-'}}</td>
-                          <td>{{contact.client || '-'}}</td>
-                          <td>{{contact.product || '-'}}</td> -->
-                          <!-- <td>{{contact.weight || '-'}}</td> -->
-                          <td class="tw-flex tw-gap-2">
-                            <fa-icon  icon="pen" class="tw-text-primary tw-cursor-pointer"></fa-icon>
-                            <fa-icon  icon="trash" class="tw-text-primary tw-cursor-pointer"></fa-icon>
-                          </td>
-                        </tr>
-                      </tbody>
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Capacity</th>
+                                <th>Occupied Capacity</th>
+                                <th>Client</th>
+                                <th>Product</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody formArrayName="contacts">
+                            <tr
+                                *ngFor="
+                                    let contact of contacts.controls;
+                                    let i = index
+                                "
+                                [formGroupName]="i"
+                            >
+                                <td>
+                                    <input class="tw-text-center" matInput formControlName="name" />
+                                </td>
+                                <td>
+                                    <input
+                                    class="tw-text-center"
+                                        matInput
+                                        formControlName="capacity"
+                                    />
+                                </td>
+                                <td>
+                                    <input
+                                        matInput
+                                        class="tw-text-center"
+                                        formControlName="occupiedCapacity"
+                                    />
+                                </td>
+                                <td>
+                                    <input matInput class="tw-text-center" formControlName="client" />
+                                </td>
+                                <td>
+                                    <input matInput class="tw-text-center" formControlName="product" />
+                                </td>
+                                <td>
+                                    <!-- <fa-icon  icon="pen" class="tw-text-primary tw-cursor-pointer"></fa-icon> -->
+                                    <fa-icon
+                                        icon="trash"
+                                        (click)="removeContact(i)"
+                                        class="tw-text-primary tw-cursor-pointer"
+                                    ></fa-icon>
+                                </td>
+                            </tr>
+                        </tbody>
                     </table>
-                    <button type="button" class="tw-text-primary tw-font-bold tw-py-5" >
-                      <fa-icon icon="circle-plus"></fa-icon> Add New contact
+                    <button
+                        type="button"
+                        class="tw-text-primary tw-font-bold tw-py-5"
+                        (click)="addContact()"
+                    >
+                        <fa-icon icon="circle-plus"></fa-icon> Add New contact
                     </button>
-                  </div>
+                </div>
             </div>
         </div>
 
         <div class="tw-flex tw-justify-end tw-pt-5">
             <div class="tw-flex tw-gap-4">
-                <button [routerLink]="id ? '../../list': '../list'" class="btn btn-outline-primary" type="button" [disabled]="(isLoading$ | async)">Cancel</button>
+                <button
+                    [routerLink]="id ? '../../list' : '../list'"
+                    class="btn btn-outline-primary"
+                    type="button"
+                    [disabled]="isLoading$ | async"
+                >
+                    Cancel
+                </button>
                 <!-- <button class="btn btn-primary" type="button" (click)="saveLocation()" [disabled]="companyForm.invalid || (isLoading$ | async)">Save</button> -->
-                <button class="btn btn-primary" type="button" (click)="saveLocation()">Save</button>
+                <button
+                    class="btn btn-primary"
+                    type="button"
+                    (click)="saveCompany()"
+                >
+                    Save
+                </button>
             </div>
         </div>
     </form>
